# memespread

./: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  clickhouse-deployment.yml  docker-compose.yml  setup.sh
deploy/docker/: docker-compose.yml  setup.sh
deploy/kubernetes/: app-deployment.yml  setup.sh
metadata_dropped/: default.monitored_tokens.b14fed40-cb56-445e-89b7-bcec1686e3ea.sql  default.token_distribution_metrics.d12fd9a5-d00c-4630-b94e-be56f549615b.sql
src/: main.rs
src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/db/: init.rs  mod.rs  models.rs  operations.rs  queries.rs  schema.rs
src/services/: excluded_accounts.rs  mod.rs  monitor.rs  token.rs
src/types/: models.rs
static/: index.html
