[package]
name = "memespread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
solana-account-decoder = "1.17"
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
