[package]
name = "memespread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
spl-token = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
futures = "0.3"
tracing = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
tracing-subscriber = "0.3"
tower_governor = "0.4.3"
tower = "0.5.1"
governor = "0.7.0"
nonzero_ext = "0.3.0"
thiserror = "1.0"
clickhouse = { version = "0.11.2", features = ["time"] }
chrono = "0.4"
time = "0.3"